RESOLVED FIXED105975
PingLoader.h missing virtual and OVERRIDE keywords on its inherited methods.
https://bugs.webkit.org/show_bug.cgi?id=105975
Summary PingLoader.h missing virtual and OVERRIDE keywords on its inherited methods.
Thomas Sepez
Reported 2013-01-02 17:11:31 PST
Small style nit.
Attachments
Patch. (2.21 KB, patch)
2013-01-03 10:25 PST, Thomas Sepez
no flags
Thomas Sepez
Comment 1 2013-01-03 10:25:12 PST
Created attachment 181186 [details] Patch. I believe this brings us more in line with the style guide. thanks.
WebKit Review Bot
Comment 2 2013-01-03 10:49:59 PST
Comment on attachment 181186 [details] Patch. Clearing flags on attachment: 181186 Committed r138720: <http://trac.webkit.org/changeset/138720>
WebKit Review Bot
Comment 3 2013-01-03 10:50:02 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.