PingLoader.h missing virtual and OVERRIDE keywords on its inherited methods. https://bugs.webkit.org/show_bug.cgi?id=105975

Reviewed by Nate Chapin.

Change adds compile-time checks only, so no new tests.

* loader/PingLoader.h:
(PingLoader):
(WebCore::PingLoader::timeout):


Canonical link: https://commits.webkit.org/124199@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138720 268f45cc-cd09-0410-ab3c-d52691b4dbfc